# mtree-portable

./: .gitignore  HISTORY.rst  Makefile  Makefile.am  README.rst  autogen.sh  compare.c  configure.ac  crc.c  create.c  cwalk.c  excludes.c  extern.h  getid.c  misc.c  mtree-portable.spec  mtree.5  mtree.8  mtree.c  mtree.h  only.c  pack_dev.c  pack_dev.h  spec.c  specspec.c  stat_flags.3  stat_flags.c  stat_flags.h  verify.c
.reuse/: dep5
debian/: changelog  control  copyright  rules
pkgsrc/: DESCR  Makefile  Makefile.common
